--- a/ressources/plugin.yml
+++ b/ressources/plugin.yml
@@ -1,5 +1,6 @@
 name: SBShop
-version: '1.0'
+version: '-1'
+api-version: '1.15'
 author: Ichii
 main: fr.entasia.sbshop.Main
 depend: [Libraries, SkyCore]
