fixed cat items could not be buyed/sold

--- a/ressources/plugin.yml
+++ b/ressources/plugin.yml
@@ -1,7 +1,9 @@
 name: SBShop
 version: '-1'
 api-version: '1.15'
-author: Ichii
+authors:
+  - Ichii
+  - iTrooz_
 main: fr.entasia.sbshop.Main
 depend: [Libraries, SkyCore]
 
